Reduced font size to 16px on navGroupCategoryTitle to fix spacing issue

--- a/docs/docusaurus/static/css/custom.css
+++ b/docs/docusaurus/static/css/custom.css
@@ -41,6 +41,10 @@ body {
     text-transform: uppercase;
 }
 
+.toc .toggleNav .navGroup .navGroupCategoryTitle {
+    font-size: 16px;
+}
+
 .wrapper {
     padding: 13px 20px !important;
 }
